--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Resume</title>
+    <title>resume</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <h6>This is my first project</h6>
+    <div class="parent">
+      <div class="childone">
+
+
+      </div>
+      <div class="childtwo" onclick="openpage()">
+
+      </div>
+
+      </div>
+    <script type="text/javascript" src="main.js">
+
+    </script>
   </body>
 </html>
